# PaintApp-Qt

./: .gitignore  CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h
src/canvas/: Canvas.cpp  Canvas.h
